# ai-platform-yolov8-cls-OpenCV

./: yolov8clsOpenCV.sln
yolov8clsOpenCV/: CMakeLists.txt  class_names_store.cpp  main.cpp  yolov8clsOpenCV.vcxproj  yolov8clsOpenCV.vcxproj.filters
